--- a/OledI2C_Converter.html
+++ b/OledI2C_Converter.html
@@ -890,7 +890,7 @@ ${dataLines.join('\n')}
 
       document.getElementById('addCharBottom').addEventListener('click', () => { if (editorFont) editorFont.addChar(); });
       document.getElementById('width').addEventListener('input', function () {
-        waitforGernateF();
+        waitforGenerateF();
 
       });
 
@@ -932,22 +932,23 @@ ${dataLines.join('\n')}
                 codeVal++;
                 cur = cur.nextSibling;
               }
-              waitforGernateF();
+              waitforGenerateF();
             } break;
             case 'delete': {
               if (confirm('Delete this character ?')) {
-                const code = parseInt(wrapper.querySelector('caption').textContent.match(/\d+/)[0]);
-                let cur = wrapper.nextSibling;
-                let c = code;
-                while (cur) {
-                  const cap = cur.querySelector('caption');
-                  if (cap) FontEditor.updateCaption(cap, c);
-                  c++;
-                  cur = cur.nextSibling;
-                }
-                wrapper.remove();
+                // Clear all pixels
+                const pixels = wrapper.querySelectorAll('td');
+                pixels.forEach(cell => cell.className = 'out');
+
+                // Optional: reset xAdvance or width if you track it
+                if (wrapper.jumpData) wrapper.jumpData[3] = 0;
+
+                // Keep caption unchanged or reset if needed
+                const cap = wrapper.querySelector('caption');
+                if (cap) cap.textContent = `${cap.textContent.split(' ')[0]} (empty)`;
               }
-              waitforGernateF();
+              console.log('delete char');
+              waitforGenerateF(); // call the delayed regenerate
             } break;
             case 'left': {
               for (let p = 0; p < pixels.length; p++) {
@@ -955,7 +956,7 @@ ${dataLines.join('\n')}
                   pixels[p].className = pixels[p + 1].className;
                 } else pixels[p].className = 'out';
               }
-              waitforGernateF();
+              waitforGenerateF();
             } break;
             case 'right': {
               for (let p = pixels.length - 1; p >= 0; p--) {
@@ -963,7 +964,7 @@ ${dataLines.join('\n')}
                   pixels[p].className = pixels[p - 1].className;
                 } else pixels[p].className = '';
               }
-              waitforGernateF();
+              waitforGenerateF();
             } break;
             case 'up': {
               for (let p = 0; p < pixels.length; p++) {
@@ -973,7 +974,7 @@ ${dataLines.join('\n')}
                   pixels[p].className = pixels[p].classList.contains('out') ? 'out' : '';
                 }
               }
-              waitforGernateF();
+              waitforGenerateF();
             } break;
             case 'down': {
               for (let p = pixels.length - 1; p >= 0; p--) {
@@ -983,7 +984,7 @@ ${dataLines.join('\n')}
                   pixels[p].className = pixels[p].classList.contains('out') ? 'out' : '';
                 }
               }
-              waitforGernateF();
+              waitforGenerateF();
             } break;
             case 'tight':
             case 'release':
@@ -1010,14 +1011,14 @@ ${dataLines.join('\n')}
                 }
               }
               table.jumpData[3] = xAdv;
-              waitforGernateF();
+              waitforGenerateF();
               break;
             case 'clean':
               if (confirm('Delete the pixels ?')) {
                 for (let p = 0; p < pixels.length; p++) pixels[p].className = '';
               }
               table.jumpData[3] = editorFont.width; // reset xAdvance
-              waitforGernateF();
+              waitforGenerateF();
               break;
             case 'copy': {
               const charNumber = parseInt(prompt('Source char #:'));
@@ -1032,7 +1033,7 @@ ${dataLines.join('\n')}
                 dst[i].className = src[i].className;
               }
               table.jumpData[3] = xAdv; // recalc after copy if needed
-              waitforGernateF();
+              waitforGenerateF();
             } break;
 
 
@@ -1072,9 +1073,9 @@ ${dataLines.join('\n')}
           console.log('Clicked outside paintable area, generation skipped.');
           return;
         }
-        waitforGernateF();
+        waitforGenerateF();
       }
-      function waitforGernateF() {
+      function waitforGenerateF() {
         // Hier startet / verzögert der Timer
         if (generateTimer) clearTimeout(generateTimer);
 
