--- a/OledI2C_Converter.html
+++ b/OledI2C_Converter.html
@@ -291,7 +291,6 @@ Copyright (c) 2016 by Fabrice Weinberg
       padding-right: 11px;
       padding-left: 10px;
     }
-
   </style>
 </head>
 
@@ -459,13 +458,13 @@ Copyright (c) 2016 by Fabrice Weinberg
 
       // Select all elements with class 'buttonBorder'
       const buttons = document.querySelectorAll('.buttonBorder');
-console.log(glyphsRect.bottom, fButtons.getBoundingClientRect().top)
+      console.log(glyphsRect.bottom, fButtons.getBoundingClientRect().top)
       // Check if fButtons has reached the bottom of glyphs
       if (glyphsRect.bottom == fButtons.getBoundingClientRect().top) {
         buttons.forEach(btn => {
           btn.style.border = '1px solid #767676';
           btn.style.borderTop = 'none';
-          
+
         });
       } else {
         buttons.forEach(btn => {
@@ -481,7 +480,7 @@ console.log(glyphsRect.bottom, fButtons.getBoundingClientRect().top)
     const resizeObserver = new ResizeObserver(() => {
       adjustFButtonsPosition();
     });
-    resizeObserver.observe(glyphs); 
+    resizeObserver.observe(glyphs);
 
     // Also adjust on window scroll / resize
     window.addEventListener('resize', adjustFButtonsPosition);
@@ -569,6 +568,7 @@ console.log(glyphsRect.bottom, fButtons.getBoundingClientRect().top)
       }
 
       function hex(b) { return '0x' + b.toString(16).padStart(2, '0').toUpperCase(); }
+
 
       function renderGlyphs(scale = 3) { // default scale 3x
         const container = document.getElementById('glyphs');
@@ -735,19 +735,25 @@ console.log(glyphsRect.bottom, fButtons.getBoundingClientRect().top)
 
           // -------- Overflow detection + Jump table build --------
           glyphs.forEach(g => {
-            if (g.bytes.length) {
-              if (g.bytes.length > 0xFF) {
-                warnings.push(
-                  `Glyph ${g.code} '${String.fromCharCode(g.code)}' → ` +
-                  `Length: ${g.bytes.length} (max 255)`
-                );
-                useUint16 = true;
-              }
-
-              out += `\t${hex((jumpOffset >> 8) & 0xFF)}, ${hex(jumpOffset & 0xFF)}, ${hex(g.bytes.length)}, ${hex(g.width)}, // ${g.code} '${String.fromCharCode(g.code)}'\n`;
-              jumpOffset += g.bytes.length;
+            const isBlank = g.bytes.every(b => b === 0);
+            if (isBlank) {
+              // Blank glyph marker
+              out += `\t0xFF, 0xFF, 0x00, ${hex(g.width)}, // ${g.code} '${String.fromCharCode(g.code)}' (blank)\n`;
             } else {
-              out += `\t0xFF, 0xFF, 0x00, 0x00, // ${g.code} '${String.fromCharCode(g.code)}' (empty)\n`;
+              if (g.bytes.length) {
+                if (g.bytes.length > 0xFF) {
+                  warnings.push(
+                    `Glyph ${g.code} '${String.fromCharCode(g.code)}' → ` +
+                    `Length: ${g.bytes.length} (max 255)`
+                  );
+                  useUint16 = true;
+                }
+
+                out += `\t${hex((jumpOffset >> 8) & 0xFF)}, ${hex(jumpOffset & 0xFF)}, ${hex(g.bytes.length)}, ${hex(g.width)}, // ${g.code} '${String.fromCharCode(g.code)}'\n`;
+                jumpOffset += g.bytes.length;
+              } else {
+                out += `\t0xFF, 0xFF, 0x00, 0x00, // ${g.code} '${String.fromCharCode(g.code)}' (empty)\n`;
+              }
             }
           });
 
@@ -776,8 +782,15 @@ console.log(glyphsRect.bottom, fButtons.getBoundingClientRect().top)
           // -------- Font Data --------
           out += '\n\t// Font Data:\n';
           glyphs.forEach(g => {
-            if (g.bytes.length) {
+            // Check if the glyph is blank (all bytes zero)
+            const isBlank = g.bytes.every(b => b === 0);
+
+            if (!isBlank && g.bytes.length) {
+              // Only write non-blank glyphs
               out += '\t' + g.bytes.map(b => hex(b)).join(',') + `, // ${g.code} '${String.fromCharCode(g.code)}'\n`;
+            } else if (isBlank) {
+              // Optionally add a comment for clarity, but do NOT write bytes
+              out += `\t// ${g.code} '${String.fromCharCode(g.code)}'\n`;
             }
           });
           out += '};\n';
